table header z-index fix

--- a/css/cash.css
+++ b/css/cash.css
@@ -10,7 +10,7 @@ ul.menu-v i.icon16.color { margin: 1px 6px 1px -18px; }
 .c-transactions { padding: 10px 0; }
 .c-transactions .c-table-header { min-height: 2rem; }
 .c-transactions .c-actions-menu .c-bulk-action { display: none; }
-.c-transactions .c-actions-menu.fixed { position:  fixed; top: 0; background: white; display: block; width: 100%; padding: 12px 0; box-shadow: 0 15px 10px -10px #eee; }
+.c-transactions .c-actions-menu.fixed { position: fixed; z-index: 1; top: 0; background: white; display: block; width: 100%; padding: 12px 0; box-shadow: 0 15px 10px -10px #eee; }
 .c-transactions .c-action-add-income { background: #dec; border-radius: 2px; }
 .c-transactions .c-action-add-expense { background: #fdd; border-radius: 2px; }
 .c-transactions table { margin-top: 10px; }
